--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#root{
+    width:1300px; 
+    margin: 0 auto;
+}
+@media(max-width:1024px){
+    #root{width:90%;}
+}
